# mofaclaw

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  PR_DESCRIPTION.md  RBAC_PR_DESCRIPTION.md  README.md  TUTORIAL.md  TUTORIAL_CN.md  clipforge-env.yml  clipforge-requirements.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: general_issue.md
.github/workflows/: automated-issue-triage.yml  duplicate-detection.yml  rbac-tests.yml  scheduled-issue-triage.yml  self-assign.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  messages.rs  permissions.rs  python_env.rs  types.rs
core/src/agent/: context.rs  loop_.rs  mod.rs  subagent.rs
core/src/agent/collaboration/: mod.rs  team.rs  tests.rs  workflow.rs  workspace.rs
core/src/agent/communication/: bus.rs  mod.rs  protocol.rs
core/src/agent/roles/: architect.rs  base.rs  developer.rs  mod.rs  reviewer.rs  tester.rs
core/src/bus/: mod.rs  queue.rs
core/src/channels/: base.rs  dingtalk.rs  feishu.rs  manager.rs  mod.rs  telegram.rs  whatsapp.rs
core/src/channels/discord/: components.rs  mod.rs
core/src/cron/: mod.rs  service.rs  types.rs
core/src/gateway/: mod.rs  types.rs
core/src/heartbeat/: mod.rs  service.rs
core/src/provider/: mod.rs
core/src/rbac/: audit.rs  config.rs  manager.rs  mod.rs  path_matcher.rs  role.rs  tests.rs
core/src/sandbox/: config.rs  mod.rs  resource.rs
core/src/session/: mod.rs
core/src/skills/: hub.rs  mod.rs  multi_agent.rs
core/src/team/: bus.rs  manager.rs  mod.rs  team.rs  workflow.rs  workspace.rs
core/src/tools/: agent_message.rs  base.rs  filesystem.rs  message.rs  mod.rs  multi_agent.rs  permissions.rs  registry.rs  shell.rs  spawn.rs  team.rs  team_tools.rs  videolize.rs  web.rs  workflow.rs  workspace.rs
core/src/webhooks/: github.rs  mod.rs
core/src/workspace/: artifact.rs  context.rs  fs.rs  history.rs  lock.rs  mod.rs  types.rs
core/tests/: cron_live_test.rs  skills_hub.rs  workspace_test.rs
discord_bot/: __init__.py  bot.py  config.py  requirements.txt  session_store.py
docs/: MULTI_AGENT_ARCHITECTURE.md  MULTI_AGENT_COLLABORATION.md
examples/: multi_agent_config.json  multi_agent_team_example.rs  multi_agent_workflow_example.rs  rbac_config.json  rbac_config_production.json  rbac_config_relaxed.json  rbac_config_strict.json  rbac_usage_example.rs  rbac_use_case_cicd_pipeline.json  rbac_use_case_enterprise.json  rbac_use_case_multi_tenant_saas.json  rbac_use_case_open_source.json
mofa-effect/comp/: Guide.md  comp_modifier.py  comp_parser.py  config.py  font_installer.py  font_picker.py  headless_session.py  main.py  mofa_render.py  placeholder_generator.py  requirements.txt  resolve_renderer.py  spline_evaluator.py  utils.py
mofa-effect/comp/debug_tools/: debug_fonts.py
skills/: README.md
skills/github/: SKILL.md
skills/multi-agent/: SKILL.md  manifest.json
skills/pr-review/: SKILL.md
skills/repo-report/: SKILL.md
skills/repo-report/references/: commands.md  report-template.md
skills/repo-report/scripts/: generate-report.sh
skills/summarize/: SKILL.md
skills/tmux/: SKILL.md
skills/weather/: SKILL.md
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
