[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["李靖"]
repository = "https://github.com/mofa-org/mofaclaw"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# HTTP server for webhooks
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Cron scheduling
cron = "0.13"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system
dirs = "5.0"
path-clean = "1.0"

# HTML parsing for web tools
readability = "0"
html2md = "0.2"

# Environment variables
dotenvy = "0.15"

# Utility
regex = "1.11"
which = "7.0"
html-escape = "0.2"
tempfile = "3.14"
