[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["李靖"]
repository = "https://github.com/mofa-org/mofaclaw"

[workspace.dependencies]
# async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# configuration
config = "0.15"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error handling
anyhow = "1.0"
thiserror = "2.0"

# async traits
async-trait = "0.1"

# http client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# http server for webhooks
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# cli
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# telegram
teloxide = { version = "0.13", features = ["macros"] }

# discord
serenity = { version = "0.12", features = ["standard_framework", "cache", "http", "gateway", "model", "utils"] }
poise = "0.6.1"

# cron scheduling
cron = "0.13"

# uuid
uuid = { version = "1.11", features = ["v4"] }

# date/time
chrono = { version = "0.4", features = ["serde"] }

# file system
dirs = "5.0"
path-clean = "1.0"

# html parsing for web tools
readability = "0"
html2md = "0.2"

# environment variables
dotenvy = "0.15"

# utility
regex = "1.11"
which = "7.0"
html-escape = "0.2"
tempfile = "3.14"
