[package]
name = "mofaclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mofaclaw"
path = "src/main.rs"

[dependencies]
# Core library
mofaclaw-core = { path = "../core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { workspace = true }
console = { workspace = true }
dirs = "5.0"

# Date/time
chrono = { workspace = true }

mofa-sdk = { git = "https://github.com/mofa-org/mofa.git", branch = "feature/mofa-rs" }
