[package]
name = "mofaclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mofaclaw"
path = "src/main.rs"

[dependencies]
# Core library
mofaclaw-core = { path = "../core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { workspace = true }
console = { workspace = true }
dirs = "6.0"

# Date/time
chrono = { workspace = true }
#  local path with latest framework updates
#mofa-sdk = { path = "/Users/lijing/CodeProjects/mofa/crates/mofa-sdk" }
mofa-sdk = "0.1.0"
